@@ -34,3 +34,4 @@ t/26_atom10_parse.t
 t/27_atom03_parse.t
 t/28_atom10_write.t
 t/29_rfc2822.t
+t/30_invalid_rdfseq.t
