@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name:                XML-FeedPP
-version:             0.34
+version:             0.35
 abstract:            ~
 license:             perl
 author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.42
+generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
     Test::More:                    0
